syntax = "proto3";

package pb;

option go_package = "simplebank/pb";

import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";

message RenewAccessRequest {
  string refresh_token = 1 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message RenewAccessResponse {
  string access_token = 1;

  google.protobuf.Timestamp access_token_expires_at = 2;
}